// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render text if no children 1`] = `
<div>
  <div
    class="flex flex-row gap-2 bg-indigo-100 justify-center"
  >
    <p
      class="text-indigo-500 font-bold text-lg m-7"
    >
      No inspectors
    </p>
  </div>
</div>
`;

exports[`should be able to render 1`] = `
<div>
  <div
    class="flex flex-row gap-2 bg-indigo-100 justify-center"
  >
    <span
      class="flex flex-col p-3 items-center"
    >
      <span
        class="flex-auto text-indigo-700 mb-2"
      >
        foo
      </span>
      <span
        class="flex before:bg-indigo-700 before:inline-block before:flex-none before:[mask-image:url(/static/svg/tabler-icons/user.svg)] before:[mask-size:cover] before:[mask-position:center] before:[mask-repeat:no-repeat] before:w-10 before:h-10 w-10 h-10"
      />
    </span>
    <span
      class="flex flex-col p-3 items-center"
    >
      <span
        class="flex-auto text-indigo-700 mb-2"
      >
        bar
      </span>
      <span
        class="flex before:bg-indigo-700 before:inline-block before:flex-none before:[mask-image:url(/static/svg/tabler-icons/user.svg)] before:[mask-size:cover] before:[mask-position:center] before:[mask-repeat:no-repeat] before:w-10 before:h-10 w-10 h-10"
      />
    </span>
    <span
      class="flex flex-col p-3 items-center"
    >
      <span
        class="flex-auto text-indigo-700 mb-2"
      >
        long name
      </span>
      <span
        class="flex before:bg-indigo-700 before:inline-block before:flex-none before:[mask-image:url(/static/svg/tabler-icons/user.svg)] before:[mask-size:cover] before:[mask-position:center] before:[mask-repeat:no-repeat] before:w-10 before:h-10 w-10 h-10"
      />
    </span>
  </div>
</div>
`;
